--- a/css/style.css
+++ b/css/style.css
@@ -658,8 +658,9 @@ header {
   inset: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/bg-done.png) no-repeat center;
-  background-size: cover;
+  background: url(../img/baggrundsbillede.png) no-repeat center;
+  /* efter jeg havde ændret alle vektor i figma, skiftede jeg fra backgroundsize cover til 100% 100% også virker det endeligt! */
+  background-size: 100% 100%;
 }
 
 #seashell-closed {
