tilføjet optimeret orangefisk samt givet dem nogen mere sigende id'er samt class

--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ header {
   }
 }
 
-#ogfish {
+#orange {
   position: absolute;
   bottom: 12vh;
   width: 200px;
@@ -526,7 +526,7 @@ header {
   }
 }
 
-#ogfish2 {
+#orange2 {
   position: absolute;
   bottom: 30vh;
   width: 275px;
@@ -568,7 +568,7 @@ header {
   }
 }
 
-#puffish3 {
+#orange3 {
   position: absolute;
   bottom: 4vh;
   width: 165px;
@@ -631,7 +631,7 @@ header {
   }
 }
 
-#ogfish3 {
+#orange3 {
   position: absolute;
   bottom: 72vh;
   width: 250px;
