--- a/css/game-2.css
+++ b/css/game-2.css
@@ -189,7 +189,7 @@ body::before {
 
 /* Fisken (dodger) */
 #dodger {
-  background-image: url(../img/scubamand.png);
+  background-image: url(../img/scubaDreng.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
