--- a/css/game-2.css
+++ b/css/game-2.css
@@ -277,6 +277,10 @@ body::before {
   height: 25px;
   right: 20px;
   top: 100px;
+  background-image: url("../img/wall2.svg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #wall3 {
