--- a/css/game-2.css
+++ b/css/game-2.css
@@ -187,7 +187,7 @@ body::before {
   }
 }
 
-/* Fisken (dodger) */
+/* scubadreng (dodger) */
 #dodger {
   background-image: url(../img/scubaDreng.svg);
   background-size: contain;
