--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ header {
   inset: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/bgoptimeret.png) no-repeat center;
+  background: url(../img/bgOptimeret.png) no-repeat center;
   /* efter jeg havde ændret alle vektor i figma, skiftede jeg fra backgroundsize cover til 100% 100% også virker det endeligt! */
   background-size: 100% 100%;
 }
